# teleassist

./: README.md  compose.override.yaml  compose.yaml  example.env
backend/: Dockerfile  admin.py  bot_instructions.txt  enumerators.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 19b8b2217993_add_chats_and_messages.py  4eee282883d3_add_user_table.py  52796858cd54_add_is_active_to_user_account.py  63379f497e73_set_is_active_default_to_false.py  e211c1c37080_use_bigint_for_storing_telegram_id.py
backend/api/: dependencies.py
backend/api/v1/: chat.py  main.py  user.py
backend/core/: config.py  db.py
backend/dto/: chat.py  user.py
backend/models/: base.py  chat.py  user.py
backend/tests/: conftest.py  test_chat.py  test_user.py
bot/: config.py  handlers.py  main.py  middlewares.py  mongo.py  pyproject.toml
bot/core/: config.py
bot/tests/: test_handlers.py
