[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "alembic-postgresql-enum>=1.7.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.13",
    "openai>=1.88.0",
    "pydantic-settings>=2.9.1",
    "sqladmin>=0.20.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
    "watchdog[watchmedo]>=6.0.0",
]

[dependency-groups]
dev = [
    "watchdog>=6.0.0",
]
