[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "motor>=3.7.1",
    "pydantic-settings>=2.9.1",
    "pymongo>=4.13.2",
    "watchdog[watchmedo]>=6.0.0",
]

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
